friends: fix info cut off

--- a/source/css/layout/_partials/page-template.styl
+++ b/source/css/layout/_partials/page-template.styl
@@ -165,7 +165,7 @@ $friend-link-item-border-radius = 9px
             .name {
               width 100%
               height 60%
-              font-size 1.28rem
+              font-size 1.1rem
               color var(--second-text-color)
 
               +redefine-tablet() {
@@ -175,13 +175,13 @@ $friend-link-item-border-radius = 9px
 
             .description {
               width 100%
-              height 40%
-              font-size 1rem
+              //height 40%
+              font-size 0.98rem
               color var(--third-text-color)
 
 
               +redefine-tablet() {
-                font-size 0.98rem
+                font-size 0.95rem
               }
             }
 
